--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "management",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "client": "cd client && yarn start",
     "server": "node server.js",
@@ -8,11 +9,11 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.1.2"
   }
 }
