--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@mui/icons-material": "^5.10.16",
     "body-parser": "^1.18.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
